--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 :root {
     --main-color: #e21e5f;
+    --light-main-color: #e0497c;
+
+    --success: green;
+    --success-1: rgb(0, 184, 0);
+    --danger: red;
+    --danger-1: rgb(253, 69, 69);
+
+    --color: black;
 }
 
 body {
@@ -14,20 +22,124 @@ strong {
     color: var(--main-color);
 }
 
+main {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 button {
     border: 1px solid transparent;
     padding: 10px 25px;
     background-color: var(--main-color);
     color: white;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.readButton {
+    width:100%;
+    margin-top:auto;
+    border-radius: 0 0 12px 12px;
+}
+.readButton.notRead {
+    width:100%;
+    background-color: var(--danger);
+}
+.readButton.read {
+    width:100%;
+    background-color: var(--success);
+}
+.readButton.read:hover {
+    background-color: var(--success-1);
+}
+.readButton.notRead:hover {
+    background-color: var(--danger-1);
+}
+
+button:hover {
+    background-color: var(--light-main-color);
 }
 
 h1 {
     font-size: 3rem;
+}
+h3 {
+    margin: 0;
+    margin-bottom:10px;
 }
 h1:after{
     border-bottom:6px solid var(--main-color);
     display: block;
     margin-left:35px;
     content: " ";
-	width:5%;
+	width:30%;
+}
+
+hr {
+    border: 1px solid var(--main-color);
+    width: 100%;
+}
+
+.options {
+    margin-bottom: 15px;;
+}
+
+.cardsContainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 1fr;
+    gap: 10px;
+
+    width: 400px;
+}
+
+.book {
+    border: 1px solid var(--color);
+    border-radius: 12px;   
+
+    display:flex;
+    flex-direction: column;
+}
+
+.bookInfo {
+    padding: 0.5rem;
+}
+
+.book p {
+    margin: 0;
+    margin-bottom:5px;
+}
+
+@media (min-width: 700px) {
+    body {
+        align-items: flex-start;
+    }
+}
+
+a {
+    color: var(--main-color);
+    text-decoration: none;
+}
+
+.contactItem {
+    display:flex;
+}
+
+.contactItem a {
+    display:flex;
+    align-items: center;
+    padding:2px;
+    padding-right:30px;
+    font-size: 0.8rem;
+}
+
+.contactItem a:hover .contactH {
+    text-shadow: 0 0 5px var(--striking-color), 0 0 7px #ff0000;
+}
+
+.contactItem a img {
+    width:auto;
+    height:25px;
+    margin-right:16px;
 }
