--- a/style.css
+++ b/style.css
@@ -11,11 +11,13 @@
 }
 
 body {
-    margin: 0; padding: 0;
+    margin: 0;
+    padding: 0;
     font-family: 'Roboto', arial;
     display: flex;
     flex-direction: column;
     align-items: center;
+    box-sizing: border-box;
 }
 
 strong {
@@ -23,7 +25,7 @@ strong {
 }
 
 main {
-    display:flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
 }
@@ -35,24 +37,35 @@ button {
     color: white;
     font-weight: bold;
     cursor: pointer;
+
+    display: flex;
+    align-items: center;
 }
 
+button p {
+    margin: 0;
+    padding: 0;
+}
 .readButton {
-    width:100%;
-    margin-top:auto;
+    width: 100%;
+    margin-top: auto;
     border-radius: 0 0 12px 12px;
 }
+
 .readButton.notRead {
-    width:100%;
+    width: 100%;
     background-color: var(--danger);
 }
+
 .readButton.read {
-    width:100%;
+    width: 100%;
     background-color: var(--success);
 }
+
 .readButton.read:hover {
     background-color: var(--success-1);
 }
+
 .readButton.notRead:hover {
     background-color: var(--danger-1);
 }
@@ -64,16 +77,19 @@ button:hover {
 h1 {
     font-size: 3rem;
 }
+
 h3 {
     margin: 0;
-    margin-bottom:10px;
+    margin-bottom: 10px;
+    text-align: center;
 }
-h1:after{
-    border-bottom:6px solid var(--main-color);
+
+h1:after {
+    border-bottom: 6px solid var(--main-color);
     display: block;
-    margin-left:35px;
+    margin-left: 35px;
     content: " ";
-	width:30%;
+    width: 30%;
 }
 
 hr {
@@ -82,7 +98,11 @@ hr {
 }
 
 .options {
-    margin-bottom: 15px;;
+    margin-bottom: 15px;
+    display:flex;
+    gap:10px;
+    justify-content: space-between;
+    width: 350px;
 }
 
 .cardsContainer {
@@ -96,9 +116,9 @@ hr {
 
 .book {
     border: 1px solid var(--color);
-    border-radius: 12px;   
+    border-radius: 12px;
 
-    display:flex;
+    display: flex;
     flex-direction: column;
 }
 
@@ -108,7 +128,66 @@ hr {
 
 .book p {
     margin: 0;
-    margin-bottom:5px;
+    margin-bottom: 5px;
+}
+
+.addBookContainer {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid transparent;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    padding: 30px;
+    padding-top: 10px;
+    margin-bottom: 20px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap:15px;
+    width: 300px;
+}
+
+input {
+    background-color: var(--background-color);
+    border: 1px solid #D6D9DC;
+    border-radius: 3px;
+    padding: 7px;
+    font-size: 14px;
+}
+
+input.correctField {
+    border: 1px solid green;
+    box-shadow: none;
+    /* Remove default red glow in Firefox */
+}
+
+input.invalid {
+    border: 1px solid red;
+    /*color: #D55C5F;*/
+    box-shadow: none;
+    /* Remove default red glow in Firefox */
+}
+
+input:focus {
+    outline: none;
+    border: 1px solid var(--main-color);
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+label {
+}
+
+.addBookButtons {
+    display: flex;
+    gap:10px;
+    justify-content: space-between;
+}
+#addBook {
+    background-color: var(--success);
+}
+#cancelAddBook {
+    background-color: var(--danger);
 }
 
 @media (min-width: 700px) {
@@ -117,20 +196,30 @@ hr {
     }
 }
 
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 a {
     color: var(--main-color);
     text-decoration: none;
 }
 
 .contactItem {
-    display:flex;
+    display: flex;
 }
 
 .contactItem a {
-    display:flex;
+    display: flex;
     align-items: center;
-    padding:2px;
-    padding-right:30px;
+    padding: 2px;
+    padding-right: 30px;
     font-size: 0.8rem;
 }
 
@@ -139,7 +228,7 @@ a {
 }
 
 .contactItem a img {
-    width:auto;
-    height:25px;
-    margin-right:16px;
+    width: auto;
+    height: 25px;
+    margin-right: 16px;
 }
