--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
     --danger-1: rgb(253, 69, 69);
 
     --color: black;
+
+    --phone-screen: 80vw;
 }
 
 body {
@@ -28,6 +30,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex:1;
 }
 
 button {
@@ -50,6 +53,8 @@ button p {
     width: 100%;
     margin-top: auto;
     border-radius: 0 0 12px 12px;
+    display: flex;
+    justify-content: center;
 }
 
 .readButton.notRead {
@@ -84,6 +89,10 @@ h3 {
     text-align: center;
 }
 
+h3 span {
+    margin-right: auto;
+}
+
 h1:after {
     border-bottom: 6px solid var(--main-color);
     display: block;
@@ -111,7 +120,7 @@ hr {
     grid-auto-rows: 1fr;
     gap: 10px;
 
-    width: 400px;
+    width: 90vw;
 }
 
 .book {
@@ -145,7 +154,7 @@ form {
     display: flex;
     flex-direction: column;
     gap:15px;
-    width: 300px;
+    width: 80vw;
 }
 
 input {
