--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     --danger-1: rgb(253, 69, 69);
 
     --color: black;
+    --background-color: white;
 
     --phone-screen: 80vw;
 }
@@ -20,6 +21,10 @@ body {
     flex-direction: column;
     align-items: center;
     box-sizing: border-box;
+
+    min-height: 400px;
+   margin-bottom: 100px;
+   clear: both;
 }
 
 strong {
@@ -40,6 +45,7 @@ button {
     color: white;
     font-weight: bold;
     cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
     display: flex;
     align-items: center;
@@ -81,6 +87,10 @@ button:hover {
 
 h1 {
     font-size: 3rem;
+}
+
+h2 {
+    margin:0;
 }
 
 h3 {
@@ -187,6 +197,10 @@ input:focus {
 label {
 }
 
+span.error {
+    color: red;
+}
+
 .addBookButtons {
     display: flex;
     gap:10px;
@@ -199,10 +213,40 @@ label {
     background-color: var(--danger);
 }
 
+.cardOptions {
+    display:flex;
+    justify-content: space-around;
+    margin-bottom:10px;
+}
+
 @media (min-width: 700px) {
     body {
-        align-items: flex-start;
+        
     }
+    header {
+        align-self: flex-start;
+        margin-left: 50px;
+        width:90%;
+    }
+    h1:after {
+        border-bottom: 6px solid var(--main-color);
+        display: block;
+        margin-left: 35px;
+        content: " ";
+        width: 10%;
+    }
+    form {
+        width: 50vw;
+    }    
+    main {
+
+    }
+    .cardsContainer {
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));;
+        grid-auto-rows: 200px;
+        gap: 15px;
+    
+    }    
 }
 
 footer {
@@ -213,11 +257,17 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: var(--background-color);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+    border-top: 3px solid var(--main-color);
 }
 
 a {
     color: var(--main-color);
     text-decoration: none;
+    margin-top:10px;
+    margin-bottom:10px;
 }
 
 .contactItem {
@@ -240,4 +290,13 @@ a {
     width: auto;
     height: 25px;
     margin-right: 16px;
+}
+
+#addBookButton:disabled {
+    background-color: var(--light-main-color);
+    cursor:default;
+    border: 1px solid var(--main-color)
+}
+#addBookButton:disabled:hover {
+    background-color: var(--light-main-color);
 }
