--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ hr {
     grid-auto-rows: 1fr;
     gap: 10px;
 
-    width: 90vw;
+    width: 95vw;
 }
 
 .book {
@@ -162,6 +162,7 @@ hr {
     padding: 30px;
     padding-top: 10px;
     margin-bottom: 20px;
+    width: 80vw;
 }
 
 form {
@@ -230,7 +231,7 @@ span.error {
 
 @media (min-width: 700px) {
     body {
-        
+        align-items: flex-start;
     }
     header {
         align-self: flex-start;
@@ -245,20 +246,25 @@ span.error {
         width: 10%;
     }
     form {
-        width: 50vw;
+        width: 100%;
     }    
     main {
-
+        margin-left: 50px;
+        width:100%;
     }
     .options {
         align-self: flex-start;
     }
     .cardsContainer {
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));;
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));;
         grid-auto-rows: 200px;
         gap: 15px;
-    
+        width: 80vw;
+        align-self:flex-start;
     }    
+    .addBookContainer {
+        width: 400px;
+    }
 }
 
 footer {
