--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ input.invalid {
 
 input:focus {
     outline: none;
-    border: 1px solid var(--main-color);
+    border: 1px solid lightblue;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
